# ff

./: .pre-commit-config.yaml  README.md
app/: pyproject.toml
app/ff/: main.py
